Closed Bug 344887 Opened 19 years ago Closed 19 years ago

"ASSERTION: Don't try to move the root widget to something non-zero" involving SVG opacity

Categories

(Core :: SVG, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: longsonr)

References

Details

(Keywords: assertion, testcase)

Attachments

(2 files, 1 obsolete file)

###!!! ASSERTION: Don't try to move the root widget to something non-zero: 'GetParent() || (aX == 0 && aY == 0)', file /Users/admin/trunk/mozilla/view/src/nsView.cpp, line 313
Attached image testcase
Blocks: 344905
Attached patch patch (obsolete) — Splinter Review
Assignee: general → longsonr
Status: NEW → ASSIGNED
Attachment #229518 - Flags: review?(tor)
Comment on attachment 229518 [details] [diff] [review] patch >Index: nsSVGPathGeometryFrame.cpp >=================================================================== >RCS file: /cvsroot/mozilla/layout/svg/base/src/nsSVGPathGeometryFrame.cpp,v >retrieving revision 1.62 >diff -u -p -8 -r1.62 nsSVGPathGeometryFrame.cpp >--- nsSVGPathGeometryFrame.cpp 30 Jun 2006 19:19:42 -0000 1.62 >+++ nsSVGPathGeometryFrame.cpp 17 Jul 2006 19:31:05 -0000 >@@ -433,17 +433,19 @@ nsSVGPathGeometryFrame::UpdateCoveredReg > } else > cairo_fill_extents(ctx, &xmin, &ymin, &xmax, &ymax); > > cairo_user_to_device(ctx, &xmin, &ymin); > cairo_user_to_device(ctx, &xmax, &ymax); > > cairo_destroy(ctx); > >- mRect = nsSVGUtils::ToBoundingPixelRect(xmin, ymin, xmax, ymax); >+ if (!IsDegeneratePath(xmin, ymin, xmax, ymax)) { >+ mRect = nsSVGUtils::ToBoundingPixelRect(xmin, ymin, xmax, ymax); >+ } I think the test needs to go before the calls to cairo_user_to_device().
Attachment #229518 - Attachment is obsolete: true
Attachment #229630 - Flags: review?(tor)
Attachment #229518 - Flags: review?(tor)
Attachment #229630 - Flags: review?(tor) → review+
Attachment #229630 - Flags: superreview?(roc)
Attachment #229630 - Flags: superreview?(roc) → superreview+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Crashtest checked in.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: