Bug 344887 - ASSERTION: Don't try to move the root widget to something non-zero. r=tor, sr=roc